--- a/sudoku.cabal
+++ b/sudoku.cabal
@@ -20,7 +20,7 @@ executable sudoku
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.8
+  build-depends:       base >=4.6 && <4.8, gloss
   hs-source-dirs:      src
   default-language:    Haskell2010
 
