--- a/sudoku.cabal
+++ b/sudoku.cabal
@@ -17,10 +17,11 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 executable sudoku
+  ghc-options:         -Wall -fno-warn-type-defaults
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.8, gloss
+  build-depends:       base >=4.6 && <4.8, gloss, directory
   hs-source-dirs:      src
   default-language:    Haskell2010
 
