--- a/sudoku.cabal
+++ b/sudoku.cabal
@@ -16,6 +16,18 @@ build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
 
+library
+  ghc-options:         -Wall -fno-warn-type-defaults
+  exposed-modules:       
+    Game
+    Interface
+    Parser
+    Records
+    Types
+  build-depends:       base >=4.6 && <4.8, gloss, directory
+  hs-source-dirs:      src
+  default-language:    Haskell2010
+
 executable sudoku
   ghc-options:         -Wall -fno-warn-type-defaults
   main-is:             Main.hs
